--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "6.4"
+    "react-router-dom": "6.4",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
