--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "apexcharts": "^4.7.0",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "6.4",
+    "react-select": "^5.10.1",
     "sooner": "^1.1.4"
   },
   "devDependencies": {
